; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43legacy/extr_phy.c_b43legacy_phy_lo_g_measure_txctl2.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43legacy/extr_phy.c_b43legacy_phy_lo_g_measure_txctl2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b43legacy_wldev = type { %struct.b43legacy_phy }
%struct.b43legacy_phy = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.b43legacy_wldev*)* @b43legacy_phy_lo_g_measure_txctl2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @b43legacy_phy_lo_g_measure_txctl2(%struct.b43legacy_wldev* %0) #0 {
  %2 = alloca %struct.b43legacy_wldev*, align 8
  %3 = alloca %struct.b43legacy_phy*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.b43legacy_wldev* %0, %struct.b43legacy_wldev** %2, align 8
  %8 = load %struct.b43legacy_wldev*, %struct.b43legacy_wldev** %2, align 8
  %9 = getelementptr inbounds %struct.b43legacy_wldev, %struct.b43legacy_wldev* %8, i32 0, i32 0
  store %struct.b43legacy_phy* %9, %struct.b43legacy_phy** %3, align 8
  store i32 0, i32* %4, align 4
  %10 = load %struct.b43legacy_wldev*, %struct.b43legacy_wldev** %2, align 8
  %11 = call i32 @b43legacy_radio_write16(%struct.b43legacy_wldev* %10, i32 82, i32 0)
  %12 = call i32 @udelay(i32 10)
  %13 = load %struct.b43legacy_wldev*, %struct.b43legacy_wldev** %2, align 8
  %14 = call i64 @b43legacy_phy_lo_g_singledeviation(%struct.b43legacy_wldev* %13, i32 0)
  store i64 %14, i64* %6, align 8
  store i32 0, i32* %5, align 4
  br label %15

15:                                               ; preds = %32, %1
  %16 = load i32, i32* %5, align 4
  %17 = icmp slt i32 %16, 16
  br i1 %17, label %18, label %35

18:                                               ; preds = %15
  %19 = load %struct.b43legacy_wldev*, %struct.b43legacy_wldev** %2, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @b43legacy_radio_write16(%struct.b43legacy_wldev* %19, i32 82, i32 %20)
  %22 = call i32 @udelay(i32 10)
  %23 = load %struct.b43legacy_wldev*, %struct.b43legacy_wldev** %2, align 8
  %24 = call i64 @b43legacy_phy_lo_g_singledeviation(%struct.b43legacy_wldev* %23, i32 0)
  store i64 %24, i64* %7, align 8
  %25 = load i64, i64* %7, align 8
  %26 = load i64, i64* %6, align 8
  %27 = icmp slt i64 %25, %26
  br i1 %27, label %28, label %31

28:                                               ; preds = %18
  %29 = load i64, i64* %7, align 8
  store i64 %29, i64* %6, align 8
  %30 = load i32, i32* %5, align 4
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %28, %18
  br label %32

32:                                               ; preds = %31
  %33 = load i32, i32* %5, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %5, align 4
  br label %15

35:                                               ; preds = %15
  %36 = load i32, i32* %4, align 4
  %37 = load %struct.b43legacy_phy*, %struct.b43legacy_phy** %3, align 8
  %38 = getelementptr inbounds %struct.b43legacy_phy, %struct.b43legacy_phy* %37, i32 0, i32 0
  store i32 %36, i32* %38, align 4
  ret void
}

declare dso_local i32 @b43legacy_radio_write16(%struct.b43legacy_wldev*, i32, i32) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i64 @b43legacy_phy_lo_g_singledeviation(%struct.b43legacy_wldev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
